<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            android:text="@string/settings_title_search"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/group_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <RadioButton
                android:id="@+id/radio_my_books"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_search_library" />

            <RadioButton
                android:id="@+id/radio_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_search_google" />


        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            android:text="@string/settings_title_fields"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">

            <CheckBox
                android:id="@+id/check_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_fields_isbn"/>

            <CheckBox
                android:id="@+id/check_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_fields_title"/>

            <CheckBox
                android:id="@+id/check_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_fields_author"/>

            <CheckBox
                android:id="@+id/check_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_fields_publisher"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            android:text="@string/settings_title_sort"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/group_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <RadioButton
                android:id="@+id/radio_title_az"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_sort_title_az" />

            <RadioButton
                android:id="@+id/radio_title_za"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_sort_title_za" />

            <RadioButton
                android:id="@+id/radio_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_sort_new" />

            <RadioButton
                android:id="@+id/radio_older"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_sort_old" />

        </RadioGroup>

    </LinearLayout>

</ScrollView>