<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.regresoa.itaca.view.home.HomeActivity">

    <item
        android:id="@+id/action_share"
        android:orderInCategory="1"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_info"
        android:orderInCategory="1"
        android:title="@string/action_info"
        android:icon="@drawable/ic_action_notes"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="2"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_remove"
        android:orderInCategory="3"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="always" />

</menu>
